--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "FiraGO";
+  font-weight: 700;
+  font-style: normal;
+  src: local("FiraGO"), url("assets/fonts/FiraGO-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "FiraGO";
+  font-weight: 500;
+  font-style: normal;
+  src: local("FiraGO"), url("assets/fonts/FiraGO-Medium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "FiraGO";
+  font-weight: 400;
+  font-style: normal;
+  src: local("FiraGO"), url("assets/fonts/FiraGO-Regular.woff2") format("woff2");
+}
